--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-animation-on-scroll": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.7.0",
+    "react-snap-carousel": "^0.3.1",
     "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
